<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YouCantHide</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_registration_confirm">RegistrationConfirm</string>
    <string name="title_activity_game_creation">GameCreation</string>
    <string name="title_activity_new_game_confirm">NewGameConfirm</string>
    <string name="reg_first_name">First Name</string>
    <string name="reg_last_name">Last Name</string>
    <string name="reg_user_name">User Name</string>
    <string name="reg_password">Password</string>
    <string name="reg_password_confirm">Re-Enter Password</string>
    <string name="button_send">Send</string>
    <string name="radio_field_sm">Small (x-yards?)</string>
    <string name="radio_field_md">Medium (y-yards!)</string>
    <string name="radio_field_lg">Large (z-yards.)</string>

</resources>