<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <EditText android:id="@+id/reg_first_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_first_name" />
    <EditText android:id="@+id/reg_last_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_last_name" />
    <EditText android:id="@+id/reg_user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_user_name" />
    <EditText android:id="@+id/reg_password"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_password" />
    <EditText android:id="@+id/reg_password_confirm"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_password_confirm" />
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage" />
</LinearLayout>